src/test/resources/sdp/examples/should-pass/minimal-bad-types/minimal.sdp
v=0
w=dd
o=- 123 0 IN IP4 streaming.awesome.com
y=sdfsdfsd
s=my session
y=sdfsdfsd