src/test/resources/sdp/examples/should-fail/bad-data/version/wrong-version/minimal.sdp
v=1
o=- 123 0 IN IP4 streaming.awesome.com
s=my session
